--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
-django==3.2.15
-awssig==0.5.0
-gunicorn==20.1.0
-whitenoise==6.2.0
-dj-database-url==0.5.0
-psycopg2-binary==2.9.2
+django
+awssig
+whitenoise
